--- a/index.html
+++ b/index.html
@@ -10,111 +10,19 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-        background-color: #fdfdfd;
-      }
-      .container {
-        padding-right: 6rem;
-        padding-left: 6rem;
-      }
-      .header-responsive {
-        display: flex;
-        justify-content: space-between;
-      }
-      .header-text-responsive {
-        font-size: 1.8rem;
-      }
-      .desc {
-        display: flex;
-        justify-content: space-between;
-      }
-      table {
-        width: 100%;
-        overflow-x: hidden;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid black;
-      }
-      th,
-      td {
-        text-align: center;
-      }
-      .footer-board {
-        display: flex;
-        justify-content: space-evenly;
-      }
-      .dir-list {
-        display: flex;
-        flex-wrap: wrap;
-        /* padding: 0; */
-      }
-
-      .dir-list li {
-        flex-basis: 50%;
-      }
-      @media (max-width: 600px) {
-        .container {
-          padding-right: 0rem;
-          padding-left: 0rem;
-        }
-        .header-responsive {
-          display: inline-block;
-        }
-        .text-responsive {
-          font-size: 1.2rem;
-        }
-        .header-text-responsive {
-          font-size: 1.6rem;
-        }
-        .desc {
-          display: inline-block;
-        }
-        table {
-          width: 100%;
-        }
-        .footer-board {
-          display: inline-block;
-        }
-        .dir-list li {
-          flex-basis: 100%;
-        }
-        .center{
-          display: flex;
-          justify-content: center;
-        }
-      }
-      @media(max-width:900px){
-        .header-responsive{
-          display: inline-block;
-        }
-      }
-    </style>
   </head>
-  <body>
-    <div class="container">
-      <div class="header-responsive">
-        <div>
-          <p>Logo</p>
-        </div>
-        <div>
+  <body style="padding: 0px 10%;">
+    <div style="margin-right: 10%;">
+      <field name="name">Logo</field>
+    </div>
+        <div style="margin-left: 60%;">
           <p style="font-weight: bold; font-size: 1.5rem">
             Abuja Property Development Company Limited
           </p>
-          <div>
             <p>Plot 1329 Peace Drive, cultural Spine (Behind Agis), Area 11.</p>
-          </div>
-          <div>
             <p>Garki, Abuja, Mobile: +234 815 061 8322.</p>
-          </div>
-          <div>
             <p>website: www.apdc.com.ng</p>
-          </div>
         </div>
-      </div>
       <hr />
       <div
         style="
@@ -125,92 +33,94 @@
         "
       >
         <p style="font-size: 1.4rem">offer letter</p>
-        <p class="header-text-responsive">
+        <p>
           no three bedroom flat (carcass) at apdc capital estate, plot 18, kaba
           district abuja.
         </p>
       </div>
-      <div style="margin-top: 2rem; font-size: 1.3rem">
-        <p class="text-responsive">
+      <div style="margin-top: 2rem; font-size: 1.3rem; padding: 0px 50px">
+        <p>
           Further to your expression of interest to purchase one number, three
           bedroom flat (carcass) at APDC capital estate, kaba district, Abuja we
           are glad to offer you said property for purchase on the following
           terms and conditions.
         </p>
       </div>
-      <div style="margin-top: 2rem">
-        <div class="desc">
+      <div style="margin-top: 2rem; text-align: center;">
+        <div style="display:flex; justify-content: center;">
           <p style="font-weight: bold">Offeror/Vendor</p>
-          <p>Abuja Property Development Company (APDC)</p>
+          <p style="margin-left: 10%;">Abuja Property Development Company (APDC)</p>
         </div>
-        <div class="desc">
+        <div style="display:flex; justify-content: center;">
           <p style="font-weight: bold">Housing Type</p>
-          <p>
+          <p style="margin-left: 10%;">
             One unit of three bedroom flat (Carcass) <br />
             measuring approximately 156sqm <br />(more adequately in the
             bronchure purchased)
           </p>
         </div>
-        <div class="desc">
+        <div style="display: flex; justify-content: center;">
           <p style="font-weight: bold">Tenure</p>
-          <p>
+          <p style="margin-left: 10%;">
             On leasehold basis fot the remainder of term of <br />
             99years with effect from September 13, 2013.
           </p>
         </div>
       </div>
-      <div style="margin-top: 2rem; overflow-x: hidden">
-        <div style="text-decoration: underline">
-          <p>Price/Payment terms</p>
+      <div style="margin-top: 2rem; overflow-x: hidden; padding: 0px 50px">
+        <div style="text-decoration: underline;">
+          <p style=" font-size: 20px;">Price/Payment terms</p>
         </div>
-        <div class="desc">
-          <p>Installment/NHF mortgage plan</p>
-          <p>12-18 months payments spread</p>
+        <div style="display: flex; justify-content: space-between;">
+          <p style="font-weight: bold; font-size: 25px;">Installment/NHF mortgage plan</p>
+          <p style="font-weight: bold; font-size: 25px;">12-18 months payments spread</p>
         </div>
-        <table>
+        <table style="border: 1px solid black; width: 100%; height: 20px;">
           <tr>
-            <th>Payment</th>
-            <th>Timeline</th>
-            <th>% PMT</th>
-            <th>Amount Due (N)</th>
+            <th style="border: 1px solid black; height:50px">Payment</th>
+            <th style="border: 1px solid black; height:50px">Timeline</th>
+            <th style="border: 1px solid black; height:50px">% PMT</th>
+            <th style="border: 1px solid black; height:50px">Amount Due (N)</th>
           </tr>
-          <tr>
-            <td>1st Installment</td>
-            <td>Upon Application</td>
-            <td>10%</td>
-            <td>1,490,400.00</td>
+          <tr style="border: 1px solid black; height: 50px;">
+            <td style="border: 1px solid black; text-align: center">1st Installment</td>
+            <td style="border: 1px solid black; text-align: center">Upon Application</td>
+            <td style="border: 1px solid black; text-align: center">10%</td>
+            <td style="border: 1px solid black; text-align: center">1,490,400.00</td>
           </tr>
-          <tr>
-            <td>2nd Installment</td>
-            <td>12-18months</td>
-            <td>40%</td>
-            <td>5,961,600.00</td>
+          <tr style="border: 1px solid black; height:50px;">
+            <td style="border: 1px solid black; text-align: center">2nd Installment</td>
+            <td style="border: 1px solid black; text-align: center">12-18months</td>
+            <td style="border: 1px solid black; text-align: center">40%</td>
+            <td style="border: 1px solid black; text-align: center">5,961,600.00</td>
           </tr>
-          <tr>
+          <tr style="border: 1px solid black; height:50px;">
             <td></td>
             <td></td>
-            <td>50%</td>
-            <td>7,452,000.00</td>
+            <td style="border: 1px solid black; text-align: center">50%</td>
+            <td style="border: 1px solid black; text-align: center">7,452,000.00</td>
           </tr>
-          <tr>
+          <tr style="border: 1px solid black; height:50px;">
             <td></td>
             <td></td>
-            <td>100%</td>
-            <td>14,904,000.00</td>
+            <td style="border: 1px solid black; text-align: center;">100%</td>
+            <td style="border: 1px solid black; text-align: center;">14,904,000.00</td>
           </tr>
         </table>
         <div style="margin-top: 6rem">
           <p>
-            10% equity contribution of total consideration to be paid to the
+            <b>10% equity</b> contribution of total consideration to be paid to the
             developer, APDC, immediately upon acceptance offer within 30 days of
             the offer.
           </p>
-          <p>
-            Balance of 90% to be paid by FMBN under te national housing fund
-            through the buyer's selected primary mortgage instituition. Any
-            price difference will be born by the buyer where FMBN's 90% does not
-            cover the balance after equity.
-          </p>
+          <ul>
+            <li>
+              Balance of 90% to be paid by FMBN under te national housing fund
+              through the buyer's selected primary mortgage instituition. Any
+              price difference will be born by the buyer where FMBN's 90% does not
+              cover the balance after equity.
+            </li>
+          </ul>
         </div>
         <div style="margin-top: 3rem">
           <hr />
@@ -224,34 +134,39 @@
         >
           <p>Board of Directors</p>
         </div>
-        <div class="center">
-          <div class="footer-board">
-            <div>
-              <p style="font-weight: bold">Alh. Mohammed Idris</p>
-              <p style="font-size: 0.89rem">Chairman</p>
+        <div style="display: flex; justify-content: center;">
+          <div style="margin-right: 20px;">
+            <p style="font-weight: bold; font-size:20px;">Alh. Mohammed Idris</p>
+            <p style="font-size: 1rem">Chairman</p>
+          </div>
+          <div>
+            <p style="font-weight: bold; font-size:20px">Bldr Lawal Aliyu Magaji</p>
+            <p style="font-size: 1rem">Ag. Managing Director / CEO</p>
+          </div>
+        </div>           
+            <div style="display:flex; justify-content: center;">
+              <ul style="display: flex;">
+                <li style="margin-right: 50px;">Engr. E.A Oluwadamisi</li>
+                <li style="margin-right: 50px;">Esr. Adamu Kasimu</li>
+                <li style="margin-right: 50px;">Hon Yakubu Adamu</li>
+              </ul>
             </div>
             <div>
-              <p style="font-weight: bold">Bldr Lawal Aliyu Magaji</p>
-              <p style="font-size: 0.89rem">Ag. Managing Director / CEO</p>
+              <div style="display:flex; justify-content: center;">
+                <ul style="display: flex;">
+                  <li style="margin-right: 50px;">Hon. Mohammed A. Sadiq</li>
+                  <li style="margin-right: 50px;">Ibrahim Aliyu</li>
+                  <li style="margin-right: 50px;">Arc. Gabriel Yakubu Aduku</li>
+                </ul>
+              </div>
             </div>
-          </div>
-          </div>
-            <div class="centralize">
-              <ul class="dir-list">
-                <li>Engr. E.A Oluwadamisi</li>
-                <li>Esr. Adamu Kasimu</li>
-                <li>Hon Yakubu Adamu</li>
+            <div style="display:flex; justify-content: center;">
+              <ul style="display: flex;">
+                <li style="margin-right: 50px;">Kabir Garba</li>
+                <li style="margin-right: 50px;">Engr Obiora Felix Nwankwo</li>
+                <li style="margin-right: 50px;">Tpl Mukthar Galadima</li>
               </ul>
-              <ul class="dir-list">
-                <li>Hon. Mohammed A. Sadiq</li>
-                <li>Ibrahim Aliyu</li>
-                <li>Arc. Gabriel Yakubu Aduku</li>
-              </ul>
-              <ul class="dir-list">
-                <li>Kabir Garba</li>
-                <li>Engr Obiora Felix Nwankwo</li>
-                <li>Tpl Mukthar Galadima</li>
-              </ul>
+            </div>
             </div>
           </div>
       </div>
